--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "bootstrap-icons": "^1.8.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "spotify-web-api-js": "^1.5.2",
     "tslib": "^2.0.0",
