--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bootstrap-icons": "^1.8.1",
+    "date-fns": "^2.28.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "spotify-web-api-js": "^1.5.2",
